# faigz

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bench_faigz.c  example.c  faigz.h  test.c  test_faigz.cpp
